...
import SettingsScreen from '../SettingsComponents/SettingsScreen';
import { useAppTheme } from '../../src/hooks/useAppTheme';

// ---------- Types ----------
export type CompanyTabParamList = {
  Dashboard: undefined;
  Listings: undefined;
  Applicants: undefined;
  Company: undefined;
  Settings: { role: string };
};

interface TabIconProps {
  icon: React.ComponentProps<typeof Ionicons>['name'];
...
